--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title></title>
   </head>
   <body>
-
+    <h2>I biglietto del treno per il percorso da te selezionato costerà:</h2>
+    <h1>&#128; <span id="prezzo_biglietto"></span></h1>
 
     <script src="script.js" charset="utf-8"></script>
   </body>
