--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h2>I biglietto del treno per il percorso da te selezionato costerà:</h2>
-    <h1>&#128; <span id="prezzo_biglietto"></span></h1>
+    <h1>Prezzo: &#128; <span id="prezzo_biglietto"></span></h1>
+    <h1>Sconto: &#128; <span id="sconto"></span></h1>
+    <h1>Totale: &#128; <span id="totale"></span></h1>
 
     <script src="script.js" charset="utf-8"></script>
   </body>
