--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="row text-center">
           <div class="col-xs-4">
             <label class="red" for="name">Nome Cognome</label><br>
-            <input id="name" type="text" name="name" value="">
+            <input id="name" type="text" name="name">
           </div>
           <div class="col-xs-4">
             <label class="red" for="distance">Km da percorrere</label><br>
-            <input id="distance" type="text" name="distance" value="">
+            <input id="distance" type="text" name="distance">
           </div>
           <div class="col-xs-4">
             <label class="red" for="age">Fascia d'età</label><br>
@@ -38,12 +38,12 @@
       <div id="ticket">
         <h1 class="text-uppercase text-center white">il tuo biglietto</h1>
         <div class="container bg-white">
-          <h3 class="text-uppercase">dettaglio passeggeri</h3>
+          <h4 class="text-uppercase">dettaglio passeggeri</h4>
           <div class="row">
             <div class="col-xs-3 bg-grey h-200">
-              <h3 class="text-uppercase">
+              <h4 class="text-uppercase">
                 nome passeggero
-              </h3>
+              </h4>
               <h3 id="passengerName"></h3>
             </div>
             <div class="col-xs-9">
