--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
           <div class="col-xs-4">
             <label class="red" for="age">Fascia d'età</label><br>
             <select id="age" name="age">
+              <option value="Standard">Standard</option>
               <option value="Minorenne">Minorenne</option>
               <option value="Over65">Over65</option>
-              <option value="Altro">Altro</option>
             </select>
           </div>
         </div>
